--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <body>
         <table cellspacing="20">
             <tr>
-                <td><img src="images/img.jpg" alt="SUDIPTA MAHATO" height="100"></td>
+                <td><img src="img.jpg" alt="SUDIPTA MAHATO" height="100"></td>
                 <td><h1>SUDIPTA MAHATO</h1>
                     <em><p>STUDENT <strong><a href="https://en.wikipedia.org/wiki/Heritage_Institute_of_Technology,_Kolkata">HERITAGE INSTITUTE OF TECHNOLOGY</a>.</strong></p>
                     <p>DEPARTMENT OF <strong>ELECTRONICS AND COMMUNICATION ENGINEERING.</strong></p></em></td>
