--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
         </ul>
         <h3>HOBBIES</H3>
             <ol>
-                <li><a href="images/sports.html">SPORTS</a></li>
+                <li><a href="sports.html">SPORTS</a></li>
                 <LI>TECHNOLOGY</LI>
                 <li>READING</li>
             </ol>
